// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copy-mediaInline.ts: Copies and pastes mediaInline between different Editor instances 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
        Object {
          "attrs": Object {
            "__contextId": "MediaServicesSample-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "inode/x-empty",
            "__fileName": "text_file.txt",
            "__fileSize": 11,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "a3d20d67-14b1-4cfc-8ba8-918bbc8d71e1",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "mediaInline",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`copy-mediaInline.ts: Copies and pastes mediaInline on fullpage 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "inode/x-empty",
            "__fileName": "text_file.txt",
            "__fileSize": 11,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "a3d20d67-14b1-4cfc-8ba8-918bbc8d71e1",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "mediaInline",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "inode/x-empty",
            "__fileName": "text_file.txt",
            "__fileSize": 11,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "a3d20d67-14b1-4cfc-8ba8-918bbc8d71e1",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "mediaInline",
        },
        Object {
          "text": "  ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
